// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeeperRewards harvest (own escrow) succeeds for latest rewards root 1`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 116324,
}
`;

exports[`KeeperRewards harvest (own escrow) succeeds for latest rewards root 2`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 59528,
}
`;

exports[`KeeperRewards harvest (own escrow) succeeds for previous rewards root 1`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 118494,
}
`;

exports[`KeeperRewards harvest (own escrow) succeeds for previous rewards root 2`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 79877,
}
`;

exports[`KeeperRewards harvest (own escrow) succeeds for previous rewards root 3`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 61698,
}
`;

exports[`KeeperRewards harvest (shared escrow) succeeds for latest rewards root 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 150530,
}
`;

exports[`KeeperRewards harvest (shared escrow) succeeds for latest rewards root 2`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 57129,
}
`;

exports[`KeeperRewards harvest (shared escrow) succeeds for previous rewards root 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 152700,
}
`;

exports[`KeeperRewards harvest (shared escrow) succeeds for previous rewards root 2`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 96214,
}
`;

exports[`KeeperRewards harvest (shared escrow) succeeds for previous rewards root 3`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 59299,
}
`;

exports[`KeeperRewards set rewards delay succeeds 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 32747,
}
`;

exports[`KeeperRewards set rewards root succeeds 1`] = `
Object {
  "calldataByteLength": 740,
  "gasUsed": 112740,
}
`;

exports[`KeeperRewards set rewards root succeeds 2`] = `
Object {
  "calldataByteLength": 740,
  "gasUsed": 115516,
}
`;
